--- a/README
+++ b/README
@@ -8,6 +8,9 @@
 # bouman ggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
 
+# psychiater
+https://nl.wikipedia.org/wiki/Psychiater
+
 # involuntairy euthanasie
 https://en.wikipedia.org/wiki/Involuntary_euthanasia
 
