--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://nl.wikipedia.org/wiki/Bouman_GGZ
 # psychiater
 https://nl.wikipedia.org/wiki/Psychiater
 
+# pilot experiment
+https://en.wikipedia.org/wiki/Pilot_experiment
+
 # involuntairy euthanasie
 https://en.wikipedia.org/wiki/Involuntary_euthanasia
 
