--- a/README
+++ b/README
@@ -17,6 +17,9 @@ https://en.wikipedia.org/wiki/Pilot_experiment
 # involuntairy euthanasie
 https://en.wikipedia.org/wiki/Involuntary_euthanasia
 
+# genocide
+https://en.wikipedia.org/wiki/Genocide
+
 # erasmusbrug
 https://en.wikipedia.org/wiki/Erasmusbrug
 
